# pruneccs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: test.yaml
include/: CcsIgnoreReader.hh  Visitor.hh
src/: CcsIgnoreReader.cpp  LibertyWriter.cc  Visitor.cpp  parser.cc  pruneccs.cc
test/: asap7_ccs.lib  asap7_ccs.lib.ok  asap7_ccs2.lib  asap7_ccs2.lib.ok  big_test.ok  big_test.py  big_test.tcl  error_test.lib  error_test.lib.ok  liberty_arcs_one2one_2.tcl  nldm_only.lib  nldm_only.lib.ok  regression  regression_vars.tcl
